--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.9",
     "express": "^4.18.2",
+    "ngx-image-compress": "^18.1.5",
+    "pica": "^9.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
